fixed bug in exmaple file

--- a/example.html
+++ b/example.html
@@ -75,7 +75,7 @@
 		</p>
 		<p>
 			<strong>These two inputs has to have identical values (minimum 3 characters)</strong> <em>validate_confirmation</em><br />
-			<input name="something" class="validate_confirmation validate_min_lenght length3" />
+			<input name="something" class="validate_confirmation validate_min_length length3" />
 			<input name="something_confirmation" />
 		</p>
 		<p>
