--- a/example.html
+++ b/example.html
@@ -1,95 +1,98 @@
+<!DOCTYPE html>
 <html>
 <head>
 
 	<title>Form validator plugin for jQuery</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+
+    <meta charset="UTF-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 	<script type="text/javascript" src="validator.js"></script>
 	
 	<link href="style.css" type="text/css" rel="stylesheet" />
 	
 </head>
 <body>
-
-	<form action="" onsubmit="if($(this).validate()) alert('Valid!'); return false;">
-		<p>
-			<strong>Required</strong> <em>required</em><br />
-			<input class="required" />
-		</p>
-		<p>
-			<strong>Minimum length</strong> <em>validate_min_length length5</em><br />
-			<input class="validate_min_length length5" />
-		</p>
-		<p>
-			<strong>Max length</strong> <em>validate_max_length length5</em><br />
-			<textarea class="validate_max_length length5" rows="1"></textarea>
-		</p>
-		<p>
-			<strong>Length between 3-5 characters</strong> <em>validate_length length3-5</em><br />
-			<textarea class="validate_length length3-5" rows="1"></textarea>
-		</p>
-		<p>
-			<strong>E-mail</strong> <em>validate_email</em><br />
-			<input class="validate_email" />
-		</p>
-		<p>
-			<strong>Domain</strong> <em>validate_domain</em><br />
-			<input class="validate_domain" />
-		</p>
-		<p>
-			<strong>Url</strong> <em>validate_url</em><br />
-			<input class="validate_url" />
-		</p>
-		<p>
-			<strong>Float</strong> <em>validate_float</em><br />
-			<input class="validate_float" />
-		</p>
-		<p>
-			<strong>Integer</strong> <em>validate_int</em><br />
-			<input class="validate_int" />
-		</p>
-		<p>
-			<strong>Time HH:mm</strong> <em>validate_time</em><br />
-			<input class="validate_time" />
-		</p>
-		<p>
-			<strong>Date yyyy-mm-dd</strong> <em>validate_date</em><br />
-			<input class="validate_date" />
-		</p>
-		<p>
-			<strong>Birthdate yyyy-mm-dd</strong> <em>validate_birthdate</em><br />
-			<input class="validate_birthdate" />
-		</p>
-		<p>
-			<strong>Valid telephone number</strong> <em>validate_phone</em><br />
-			<input class="validate_phone" />
-		</p>
-		<p>
-			<strong>Valid Swedish mobile telephone number</strong> <em>validate_swemobile</em><br />
-			<input class="validate_swemobile" />
-		</p>
-		<p>
-			<strong>Simple captcha, this field has to contain value "jqueryvalidation"</strong> <em>validate_spamcheck captcha[VALUE-TO-VALIDATE]</em><br />
-			<input class="validate_spamcheck captchajqueryvalidation" />
-		</p>
-		<p>
-			<strong>These two inputs has to have identical values (minimum 3 characters)</strong> <em>validate_confirmation</em><br />
-			<input name="something" class="validate_confirmation validate_min_length length3" />
-			<input name="something_confirmation" />
-		</p>
-		<p>
-			<strong>Length restriction <span id="maxlength">50</span></strong>
-			<br />
-			<textarea rows="3" id="area"></textarea>
-		</p>
-		<script type="text/javascript">
-			$('#area').restrictLength($('#maxlength'));
-		</script>
-		<p>
-			<input type="submit" value="Validate" />
-		</p>
-	</form>
-
+    <section>
+        <form action="" onsubmit="if($(this).validate()) alert('Valid!'); return false;">
+            <p>
+                <strong>Required</strong> <em>required</em><br />
+                <input data-validation="required" />
+            </p>
+            <p>
+                <strong>Minimum length</strong> <em>validate_min_length length5</em><br />
+                <input data-validation="validate_min_length length5" />
+            </p>
+            <p>
+                <strong>Max length</strong> <em>validate_max_length length5</em><br />
+                <textarea data-validation="validate_max_length length5" rows="1"></textarea>
+            </p>
+            <p>
+                <strong>Length between 3-5 characters</strong> <em>validate_length length3-5</em><br />
+                <textarea data-validation="validate_length length3-5" rows="1"></textarea>
+            </p>
+            <p>
+                <strong>E-mail</strong> <em>validate_email</em><br />
+                <input data-validation="validate_email" />
+            </p>
+            <p>
+                <strong>Domain</strong> <em>validate_domain</em><br />
+                <input data-validation="validate_domain" />
+            </p>
+            <p>
+                <strong>Url</strong> <em>validate_url</em><br />
+                <input data-validation="validate_url" />
+            </p>
+            <p>
+                <strong>Float</strong> <em>validate_float</em><br />
+                <input data-validation="validate_float" />
+            </p>
+            <p>
+                <strong>Integer</strong> <em>validate_int</em><br />
+                <input data-validation="validate_int" />
+            </p>
+            <p>
+                <strong>Time HH:mm</strong> <em>validate_time</em><br />
+                <input data-validation="validate_time" />
+            </p>
+            <p>
+                <strong>Date yyyy-mm-dd</strong> <em>validate_date</em><br />
+                <input data-validation="validate_date" />
+            </p>
+            <p>
+                <strong>Birthdate yyyy-mm-dd</strong> <em>validate_birthdate</em><br />
+                <input data-validation="validate_birthdate" />
+            </p>
+            <p>
+                <strong>Valid telephone number</strong> <em>validate_phone</em><br />
+                <input data-validation="validate_phone" />
+            </p>
+            <p>
+                <strong>Valid Swedish mobile telephone number</strong> <em>validate_swemobile</em><br />
+                <input data-validation="validate_swemobile" />
+            </p>
+            <p>
+                <strong>Simple captcha, this field has to contain value "jqueryvalidation"</strong> <em>validate_spamcheck captcha[VALUE-TO-VALIDATE]</em><br />
+                <input data-validation="validate_spamcheck captchajqueryvalidation" />
+            </p>
+            <p>
+                <strong>These two inputs has to have identical values (minimum 3 characters)</strong> <em>validate_confirmation</em><br />
+                <input name="something" data-validation="validate_confirmation validate_min_length length3" />
+                <input name="something_confirmation" />
+            </p>
+            <p>
+                <strong>Length restriction <span id="maxlength">50</span></strong>
+                <br />
+                <textarea rows="3" id="area"></textarea>
+            </p>
+            <script type="text/javascript">
+                $('#area').restrictLength($('#maxlength'));
+            </script>
+            <p>
+                <input type="submit" value="Validate" />
+            </p>
+        </form>
+    </section>
 </body>
 </html>
