Added option for scrolling window to the top on error, changed the design

--- a/example.html
+++ b/example.html
@@ -131,6 +131,7 @@
             </p>
             <p>
                 <strong>These features applies to select lists as well</strong>
+                <br />
                 <select name="whatever" data-validation="required">
                     <option value="">- - Select something - -</option>
                     <option value="1">Green</option>
@@ -153,7 +154,7 @@
                 <input type="submit" value="Validate form"/>
             </p>
         </form>
-    </div class="section">
+    </div>
 
     <h2>
         Customized example (no border color on error, different position on error messages)
@@ -213,6 +214,6 @@
 
         </script>
 
-    </div class="section">
+    </div>
 </body>
 </html>
