--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="jquery.formvalidator.js"></script>
+    <script type="text/javascript" src="jquery.formvalidator.min.js"></script>
 
     <link href="style.css" type="text/css" rel="stylesheet"/>
 
