new license, some optimization for better prestanda

--- a/example.html
+++ b/example.html
@@ -88,7 +88,7 @@
             </p>
 
             <p>
-                <strong>Date yyyy-mm-dd</strong> <em>validate_date</em><br/>
+                <strong>Date yyyy-mm-dd</strong> (Custom date format is also possible) <em>validate_date</em><br/>
                 <input data-validation="validate_date"/>
             </p>
 
