--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script type="text/javascript" src="jquery.formvalidator.js"></script>
 
     <link href="style.css" type="text/css" rel="stylesheet"/>
