UK VAT Number Validation
UK VAT Number Validation added

--- a/example.html
+++ b/example.html
@@ -111,6 +111,11 @@
                 <strong>Valid Swedish social security number yyyymmddXXXX</strong> <em>validate_swesc</em><br/>
                 <input data-validation="validate_swesc"/>
             </p>
+            
+            <p>
+                <strong>UK VAT Number</strong> <em>validate_ukvatnumber</em><br/>
+                <input name="4" data-validation="validate_ukvatnumber"/>
+            </p>
 
             <p>
                 <strong>Custom validation</strong>
