Fixed bug in url validation, added documentation

--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script type="text/javascript" src="jquery.formvalidator.js"></script>
+    <script type="text/javascript" src="jquery.formvalidator.min.js"></script>
 
     <link href="style.css" type="text/css" rel="stylesheet"/>
 
@@ -19,8 +19,8 @@
         Form validation using jQuery
     </h1>
     <p>
-        <a href="https://github.com/victorjonsson/jQuery-Form-Validator/wiki">
-            https://github.com/victorjonsson/jQuery-Form-Validator/wiki
+        <a href="https://github.com/victorjonsson/jQuery-Form-Validator/">
+            https://github.com/victorjonsson/jQuery-Form-Validator/
         </a>
     </p>
 
