Changed attribute data-help to data-validation-help

--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script type="text/javascript" src="jquery.formvalidator.min.js?upd=1.5"></script>
+    <script type="text/javascript" src="jquery.formvalidator.min.js?upd=1.5.1"></script>
 
     <link href="style.css?upd=1.5" type="text/css" rel="stylesheet"/>
 
@@ -16,7 +16,7 @@
 <body>
 
     <h1>
-        jQuery Form Validation (v 1.5)
+        jQuery Form Validation (v 1.5.1)
     </h1>
     <p>
         <a href="https://github.com/victorjonsson/jQuery-Form-Validator/">
@@ -214,7 +214,7 @@
 
             <p>
                 <strong>Domain</strong> <em>validate_domain</em><br/>
-                <input type="text"id="testing" name="3" data-help="No protocol is needed" data-validation="validate_domain"/>
+                <input type="text"id="testing" name="3" data-validation-help="No protocol is needed" data-validation="validate_domain"/>
             </p>
 
             <p>
