minor bug fixed, renamed functions in modules, closing up on version 2.1

--- a/form-validator/test.html
+++ b/form-validator/test.html
@@ -502,7 +502,7 @@
     // Add a new validator
     $.formUtils.addValidator({
         name : 'even_number',
-        validate : function(value, $el, config, language, $form) {
+        validatorFunction : function(value, $el, config, language, $form) {
             return parseInt(value, 10) % 2 === 0;
         },
         errorMessage : 'You have to give an even number',
