--- a/form-validator/qunit.html
+++ b/form-validator/qunit.html
@@ -4,101 +4,13 @@
     <meta charset="utf-8">
     <title>QUnit Tests</title>
     <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.12.0.css">
-    <style>
-        .form-error {
-            color: red;
-            display: block;
-        }
-        label {
-            margin-left: 5px;
-        }
-    </style>
 </head>
 <body>
+
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 <form id="dummy-form" style="visibility: hidden"></form>
-<form action="" id="test-form">
-    <p>
-        <strong>Inline suggestions</strong><br />
-        <input id="inline-suggestions" data-suggestions="Monkey, Horse, Fox, Tiger, Elephant">
-    </p>
-    <p>
-        <strong>Country suggestions</strong><br />
-        <input id="country-suggestions">
-    </p>
-    <p>
-        <strong>Swedish county suggestions</strong><br />
-        <input id="swedish-county-suggestions">
-    </p>
-    <p>
-        <strong>Display password strength</strong><br />
-        <input type="password" id="password">
-    </p>
-    <p>
-        <strong>Alphanumeric and -_ and spaces</strong><br>
-        <input name="test" data-validation="alphanumeric" data-validation-allowing="-_ ">
-    </p>
-    <p>
-        <strong>Alphanumeric only</strong><br>
-        <input name="test2" data-validation="alphanumeric">
-    </p>
-    <p>
-        <strong>Must be checked</strong>
-        <br />
-        <input type="checkbox" data-validation="required" />
-    </p>
-    <p>
-        <strong>Even numbers only</strong>
-        <br />
-        <input data-validation="even_number">
-    </p>
-    <p>
-        <strong>File validation</strong>
-        <br />
-        <input type="file" name="some-file"
-                data-validation="size mime"
-                data-validation-allowing="jpg, png, ico"
-                data-validation-max-size="100kb" />
-    </p>
-    <p>
-        Callback validation, set this value to &quot;1&quot; and
-        validation will fail<br />
-        <input id="callback" />
-    </p>
-    <p>
-        <strong>Checkbox group</strong><br />
-        <label>
-            <input type="checkbox" name="box" value="1"
-                    data-validation="checkbox_group"
-                    data-validation-qty="1-2" />
-            1
-        </label>
-        <label>
-            <input type="checkbox" name="box" value="2" />
-            2
-        </label>
-        <label>
-            <input type="checkbox" name="box" value="3" />
-            3
-        </label>
-        <label>
-            <input type="checkbox" name="box" value="4" />
-            4
-        </label>
-        <label>
-            <input type="checkbox" name="box" value="5" />
-            5
-        </label>
-        <label>
-            <input type="checkbox" name="box" value="6" />
-            6
-        </label>
-    </p>
-    <p>
-        <input type="submit">
-    </p>
-</form>
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="jquery.form-validator.js"></script>
 <script src="//code.jquery.com/qunit/qunit-1.12.0.js"></script>
@@ -318,6 +230,8 @@
                 {val:input('29/02/2013', {'format':'dd/mm/yyyy', '':'date'}), isValid:false},
                 {val:input('29/13/2013', {'format':'dd/mm/yyyy', '':'date'}), isValid:false},
                 {val:input('29/00/2013', {'format':'dd/mm/yyyy', '':'date'}), isValid:false},
+                {val:'', isValid:false},
+                {val:input('', {'optional':'true', 'format':'dd/mm/yyyy', '':'date'}), isValid:true},
                 {val:'2014-01-01', isValid:true},
                 {val:'1880-01-01', isValid:true}
             ];
@@ -525,49 +439,15 @@
     var dev = window.location.hash.indexOf('dev') > -1 ? '.dev' : '';
 
     $.validationSetup({
-        language : {
-            requiredFields: 'Du måste bocka för denna'
-        },
-        modules : 'security'+dev+', location'+dev+', sweden'+dev+', file'+dev+', uk'+dev,
+        modules : 'security'+dev+', location'+dev+', sweden'+dev+', file'+dev+', date'+dev+', uk'+dev,
         onModulesLoaded: function( $form ) {
             console.log('About to run all tests');
             runAllTests();
-            $('#country-suggestions').suggestCountry();
-            $('#swedish-county-suggestions').suggestSwedishCounty();
-            $('#password').displayPasswordStrength();
-        },
-        onValidate : function() {
-            var $callbackInput = $('#callback');
-            if( $callbackInput.val() == 1 ) {
-                return {
-                    element : $callbackInput,
-                    message : 'This validation was made in a callback'
-                };
-            }
-        },
-        onError : function() {
-            alert('Invalid');
-        },
-        onSuccess : function() {
-            alert('Valid');
-            return false;
         }
-    });
-
-    // Load one module outside $.validationSetup() even though you do not have to
-    $.formUtils.loadModules('date'+dev+'.js', false, false);
-
-    // Add a new validator
-    $.formUtils.addValidator({
-        name : 'even_number',
-        validatorFunction : function(value, $el, config, language, $form) {
-            return parseInt(value, 10) % 2 === 0;
-        },
-        errorMessage : 'You have to give an even number',
-        errorMessageKey: 'badEvenNumber'
     });
 
 })(jQuery);
 </script>
-<body>
+
+</body>
 </html>
