--- a/form-validator/qunit.html
+++ b/form-validator/qunit.html
@@ -198,8 +198,10 @@
                 {val:input('1.023', {'allowing':'float', '':'number'}), isValid:true},
                 {val:'-1.032', isValid:false},
                 {val:input('-1.023', {'allowing':'float,negative', '':'number'}), isValid:true},
-                {val:input('1.023', {'allowing':'float,negative', '':'number'}), isValid:true},
-                {val:input('1.023', {'allowing':'float,negative,number', '':'number'}), isValid:true},
+                {val:input('1.0234', {'allowing':'float,negative', '':'number'}), isValid:true},
+                {val:input('1.0235', {'allowing':'float,negative,number', '':'number'}), isValid:true},
+                {val:input('1.0236', {'allowing':'float,negative,number', 'decimal-separator':',', '':'number'}), isValid:false},
+                //{val:input('1,023', {'allowing':'float,negative,number', 'decimal-separator':',', '':'number'}), isValid:true},
                 {val:'123', isValid:true}
             ];
 
@@ -438,7 +440,7 @@
 
     var dev = window.location.hash.indexOf('dev') > -1 ? '.dev' : '';
 
-    $.validationSetup({
+    $.validate({
         modules : 'security'+dev+', location'+dev+', sweden'+dev+', file'+dev+', date'+dev+', uk'+dev,
         onModulesLoaded: function( $form ) {
             console.log('About to run all tests');
