--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -85,10 +85,9 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label">Optional Server validation</label>
+            <label class="control-label">Server validation</label>
             <input class="form-control" name="code"
                    data-validation-help="The word is &quot;secret&quot;"
-                   data-validation-optional="true"
                    data-validation="server"
                    data-validation-url="http://formvalidator.net/validate-email.php" />
         </div>
@@ -96,7 +95,18 @@
         <div class="form-group">
             <label class="control-label">File validation</label>
             <input type="file" name="some-file" class="form-control"
-                   data-validation="size mime"
+                   data-validation="size mime required"
+                   data-validation-error-msg="You must upload an image file"
+                   data-validation-allowing="jpg, png, ico"
+                   data-validation-max-size="100kb" />
+        </div>
+
+        <div class="form-group">
+            <label class="control-label">File validation (multiple)</label>
+            <input type="file" multiple="multiple" name="some-file" class="form-control"
+                   data-validation="size mime required length"
+                   data-validation-length="min2"
+                   data-validation-error-msg="You must upload at least two image files"
                    data-validation-allowing="jpg, png, ico"
                    data-validation-max-size="100kb" />
         </div>
